--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -973,7 +973,8 @@ a {
 .invoice table .total,
 .invoice table .unit {
 	text-align: right;
-	font-size: 1.2em
+	font-size: 1.2em;
+	margin-right: 20px;
 }
 
 .invoice table .no {
