--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -958,7 +958,7 @@ a {
 }
 .invoice table td {
 	padding: 2px;
-	background: #eee;
+	background: #f5f5f5;
 	/*border: 1px solid #000*/
 }
 
@@ -2805,4 +2805,9 @@ div.b {
 
 .tborde-foto td{
 	border: 1px solid #979797;
+}
+
+.invoice .bg-col1 {
+	background-color: #c6c6c6;
+	color: #000000;
 }
